# cv-generator-with-rust

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
source/: .env  Cargo.toml  cv_data.json  default_template.html
source/src/: generator.rs  main.rs
