[package]
name = "cv_generator"
version = "0.1.0"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10"
serde_json = "1.0"
actix-web = "3"
dotenv = "0.15.0"
actix-files = "0.2.2"
rand = "0.8.4"
regex = "1"